[package]
name = "actix-oidc-bff"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
thiserror = "1"
openidconnect = "3.5"
oauth2 = "4.4"
serde = { version="1", features = ["derive"] }
serde_json = "1"
log = "0.4"
percent-encoding="2.3"
futures-util = "0.3"
futures-core="0.3"
chrono = "0.4"
async-trait = "0.1"
aes-gcm = "0.10"
hex = "0.4"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.11"
mockall = "0.13.0"
serial_test = "3.1"
