[package]
name = "actix-oidc-bff"
version = "0.1.0"
authors = ["Søren Schwartz"]
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "A comprehensive OIDC Backend for Frontend (BFF) solution for Actix-web, enabling secure token handling, user authentication, and authorization."
homepage = "https://github.com/3schwartz/actix-oidc-bff"
repository = "https://github.com/3schwartz/actix-oidc-bff"
readme = "README.md"
keywords = ["actix-web", "actix", "openidconnect", "openid", "oidc", "bff", "authentication", "authorization", "backend-for-frontend", "auth"]
categories = ["web-programming", "authentication", "security"]

[[example]]
name = "simple"

[dependencies]
actix-web = "4"
thiserror = "1"
openidconnect = "3.5"
oauth2 = "4.4"
serde = { version="1", features = ["derive"] }
serde_json = "1"
log = "0.4"
percent-encoding="2.3"
futures-util = "0.3"
futures-core="0.3"
chrono = "0.4"
async-trait = "0.1"
aes-gcm = "0.10"
hex = "0.4"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.11"
mockall = "0.13.0"
serial_test = "3.1"
